--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "exports": {
     "./package.json": "./package.json"
   },
- 
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
@@ -30,8 +29,10 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "firebase-admin": "^10.0.0",
     "sirv-cli": "^1.0.0",
-    "svelte-spa-router": "^3.2.0"
+    "svelte-spa-router": "^3.2.0",
+    "uuid": "^8.3.2"
   }
 }
